# ZeroADR

./: .gitignore  ASB_OPTIMIZATION_PLAN.md  CHANGELOG.md  Makefile  README.md  README_ZH.md  RELEASE_v1.1.0rc2.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
deploy/launchd/: com.zeroadr.endpoint-agent.plist
deploy/systemd/: zeroadr-endpoint-agent-linux.service  zeroadr-endpoint-agent.service
docs/: architecture.md  console-api.md  console-approvals.md  endpoint-agent-deployment.md  endpoint-lite-sensor.md  evidence-chain.md  hooks.md  linux-ebpf-collector.md  llm-adjudication-gate.md  llm-gate-calibration.md  migration-v1.md  policy.md  roadmap.md  runtime-event.md  runtime-gates.md  session-reconstruction.md  tool-result-gate.md
docs/release/: 1.0.0rc1-readiness.md  1.1.0rc1-readiness.md  1.2.0rc1-readiness.md
evaluation/agentdojo/: README.md  pyproject.toml
evaluation/agentdojo/src/zeroadr_agentdojo/: __init__.py  adapter.py  analysis.py  cli.py  hybrid.py
evaluation/asb/: LICENSE  README.md  RESULTS.md  pyproject.toml
evaluation/asb/policies/: asb-rules.yaml  asb-v12-enforce.yaml
evaluation/asb/src/zeroadr_asb/: __init__.py  adapter.py  analysis.py  benchmark.py  cli.py  manifest.py  official.py  provider.py  runner.py  source.py
examples/endpoint/: 01_sensitive_file_to_external_network.jsonl  02_process_lineage.jsonl  03_mock_collector_output.jsonl  04_bcc_process_exec.jsonl  05_bcc_sensitive_file_open.jsonl  06_bcc_file_to_network_chain.jsonl  07_agent_mock_output.jsonl
examples/hooks/: claude_code_env_approval.json  codex_env_approval.json  generic_env_approval.json  generic_redaction_secret.json  post_tool_prompt_injection.json  pre_tool_private_key.json  pre_tool_readme.json
examples/llm/: gate-dogfood-v01.jsonl  gate-labels.example.jsonl
examples/traces/: 01_normal_file_read.jsonl  02_env_file_read.jsonl  03_ssh_private_key.jsonl  04_aws_credentials.jsonl  05_safe_shell_command.jsonl  06_dangerous_shell_command.jsonl  07_normal_tool_result.jsonl  08_prompt_injection_tool_result.jsonl  09_injection_to_sensitive_file_chain.jsonl  10_injection_to_dangerous_shell_chain.jsonl  11_safe_prompt_then_normal_read.jsonl  12_sensitive_file_to_external_post.jsonl  13_sensitive_file_to_webhook.jsonl  14_normal_network_after_readme.jsonl
policies/: approval.yaml  default.yaml  llm-gate-enforce.yaml  llm-gate-shadow.yaml  runtime-gates-enforce.yaml  runtime-gates-shadow.yaml  strict.yaml  tool-result-gate-enforce.yaml  tool-result-gate-shadow.yaml
src/zeroadr/: __init__.py
src/zeroadr/api/: __init__.py  agent_health.py  approvals.py  console.py  demo.py  llm_settings.py  readonly.py  runtime_gate.py  server.py  tool_result_gate.py
src/zeroadr/cli/: __init__.py  main.py
(+73 files in other folders)
