[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroadr"
dynamic = ["version"]
description = "Local-first agent runtime security platform"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.scripts]
zeroadr = "zeroadr.cli.main:main"

[tool.setuptools.dynamic]
version = { attr = "zeroadr.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zeroadr.api" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests_local"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
