[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroadr-agentdojo-bench"
version = "0.1.0"
description = "Independent AgentDojo evaluation companion for ZeroADR"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "zeroadr>=1.0.0rc1,<2",
  "agentdojo==0.1.35",
  "openai>=1.59.7,<3",
]

[project.scripts]
zeroadr-agentdojo = "zeroadr_agentdojo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests_local"]
pythonpath = ["src", "../../src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "../../src"]

[[tool.mypy.overrides]]
module = ["agentdojo", "agentdojo.*"]
ignore_missing_imports = true
